--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -75,10 +75,10 @@ wk.image.storage=d:/work/data/wk-images
 # qiniu
 qiniu.key.access=fvpq495JtcC29_xtbbun2HctIQLEdq-OzazTsdys
 qiniu.key.secret=YOil-tq4ySj5_oIj9h_USCCOUoM1E9dfCBroO3Fj
-qiniu.bucket.header.name=community-header111
-quniu.bucket.header.url=http://qp6ifsu8w.hb-bkt.clouddn.com
-qiniu.bucket.share.name=community-share111
-qiniu.bucket.share.url=http://qp6icr68k.hb-bkt.clouddn.com
+qiniu.bucket.header.name=community-header1111
+quniu.bucket.header.url=http://qrbsox57c.hn-bkt.clouddn.com
+qiniu.bucket.share.name=community-share1111
+qiniu.bucket.share.url=http://qrbs0w6hj.hn-bkt.clouddn.com
 
 # caffeine   缓存15个数据，过期的时间是3分钟
 caffeine.posts.max-size=15
