--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,7 +6,7 @@ server.servlet.context-path=/community
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 
-# DataSourceProperties
+# MySQLProperties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/school?characterEncoding=utf-8&useSSL=false&serverTimezone=Hongkong
 spring.datasource.username=root
@@ -34,7 +34,7 @@ spring.mail.properties.mail.smtp.ssl.enable=true
 community.path.domain=http://localhost:8080
 community.path.upload=d:/work/data/upload
 
-# RedisProperties   Redis Manager中的Auth就是密码
+# RedisProperties
 spring.redis.database=11
 spring.redis.host=localhost
 spring.redis.port=6379
