--- a/src/main/resources/application-pro.properties
+++ b/src/main/resources/application-pro.properties
@@ -5,7 +5,7 @@ server.servlet.context-path=
 # ThymeleafProperties
 spring.thymeleaf.cache=true
 
-# DataSourceProperties
+# MySQLProperties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/community?characterEncoding=utf-8&useSSL=false&serverTimezone=Hongkong
 spring.datasource.username=root
